crates/carta/tests/snapshots/golden_writer__native__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "term: with colon" ]
      , [ [ Plain [ Str "definition" ] ] ]
      )
    ]
]
