crates/carta/tests/snapshots/golden_writer__native__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Div
    ( "" , [ "note" ] , [] )
    [ Para
        [ Str "be" , Space , Str "careful" , Space , Str "here" ]
    ]
]
