crates/carta/tests/snapshots/golden_writer__native__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Div
    ( "d" , [ "note" ] , [] )
    [ Para [ Str "body" , Space , Str "paragraph" ] ]
]
