crates/carta/tests/snapshots/golden_writer__native__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Emph [ Str "emph" ]
    , Space
    , Strong [ Str "strong" ]
    , Space
    , Strikeout [ Str "struck" ]
    , Space
    , Str "super"
    , Superscript [ Str "2" ]
    , Space
    , Str "sub"
    , Subscript [ Str "3" ]
    ]
]
