crates/carta/tests/snapshots/golden_writer__native__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Strong [ Str "bold" ]
    , Space
    , Str "opens"
    , Space
    , Str "the"
    , Space
    , Str "line"
    ]
, Para [ Str "*literal" , Space , Str "star" ]
]
