crates/carta/tests/snapshots/golden_writer__native__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Emph
        [ Str "see"
        , Space
        , Link
            ( "" , [] , [] )
            [ Str "text" ]
            ( "http://example.com" , "" )
        , Space
        , Str "here"
        ]
    ]
]
