crates/carta/tests/snapshots/golden_writer__native__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "ref"
    , Note [ CodeBlock ( "" , [] , [] ) "code only" ]
    ]
]
